src/lib/scala/Parser.cpp
#include "c4/scala/Parser.h"
#include <iostream>

namespace c4s {

// -----------------------------------------------------------------------------
// Lexical grammar
// -----------------------------------------------------------------------------
spLexId Parser::parseLexId() {
  spLexId lId = spLexId(new LexId);
  if (lexer->getCurToken() != STok::ID) {
    lId->addErr(c4::ERR_EXP_IDENTIFIER);
    return lId;
  }

  lId->ini = lexer->getCurTokenIni();
  lId->end = lexer->getCurTokenEnd();
  lId->val = lexer->getCurTokenStr();
  return lId;
}

/**
 * semi ::= ';' | nl {nl}
 */
void Parser::parseSemi(spSemi &semi) {
  if (lexer->getCurToken() == STok::SEMICOLON) {
    semi->opt = Semi::Opt::SEMICOLON;
    semi->tokSemiColon = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume ';'
    return;
  }

  // nl {nl}
  // We only check we've seen a linebreak and we don't keep track of its
  // position or if we've seen more than one linebreak.
  if (lexer->getSeenLineBreak()) {
    semi->opt = Semi::Opt::NL;
    return;
  }

  semi->addErr(c4::ERR_EXP_NL);
}

spStringLiteral Parser::parseStringLiteral() {
  spStringLiteral strLit = spStringLiteral(new StringLiteral);
  if (lexer->getCurToken() != STok::STRING_LITERAL) {
    strLit->addErr(c4::ERR_EXP_STRING_LITERAL);
    return strLit;
  }

  strLit->ini = lexer->getCurTokenIni();
  strLit->end = lexer->getCurTokenEnd();
  strLit->val = lexer->getCurTokenStr();
  return strLit;
}

// -----------------------------------------------------------------------------
// Grammar
// -----------------------------------------------------------------------------

/**
 * AccessModifier ::= ('private' | 'protected') [AccessQualifier]
 */
void Parser::parseAccessModifier(spAccessModifier &accessModifier) {
  if (!isAccessModifier(lexer->getCurToken())) {
    accessModifier->addErr(-1);
    return;
  }

  accessModifier->tok = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume 'private' or 'protected'

  // [AccessQualifier]
  if (lexer->getCurToken() != STok::LBRACKET) {
    return;
  }

  accessModifier->accessQual = spAccessQualifier(new AccessQualifier);
  parseAccessQualifier(accessModifier->accessQual);
  if (accessModifier->accessQual->err) {
    accessModifier->addErr(-1);
    return;
  }
}

/**
 * AccessQualifier ::= '[' (id | 'this') ']'
 */
void Parser::parseAccessQualifier(spAccessQualifier &accessQual) {
  // '['
  if (lexer->getCurToken() != STok::LBRACKET) {
    accessQual->addErr(c4::ERR_EXP_LBRACKET);
    return;
  }

  accessQual->tokLBracket = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume '['

  // (id | 'this')
  if (lexer->getCurToken() == STok::THIS) {
    accessQual->tokThis = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume 'this'
  } else {
    accessQual->id = parseLexId();
    lexer->getNextToken(); // consume 'id'
    if (accessQual->id->err) {
      accessQual->addErr(c4::ERR_EXP_IDENTIFIER);
      return;
    }
  }

  // ']'
  if (lexer->getCurToken() != STok::RBRACKET) {
    accessQual->addErr(c4::ERR_EXP_RBRACKET);
    return;
  }

  accessQual->tokRBracket = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume ']'
}

/**
 * Annotation ::= '@' SimpleType {ArgumentExprs}
 */
void Parser::parseAnnotation(spAnnotation &annotation) {
  // '@'
  if (lexer->getCurToken() != STok::AT) {
    annotation->addErr(-1);
    return;
  }

  annotation->tokAt = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume '@'

  // SimpleType
  annotation->simpleType = spSimpleType(new SimpleType);
  parseSimpleType(annotation->simpleType);
  if (annotation->simpleType->err) {
    annotation->addErr(-1);
    return;
  }

  // {ArgumentExprs}
  State state;
  while (true) {
    saveState(state);
    auto argExprs = spArgumentExprs(new ArgumentExprs);
    parseArgumentExprs(argExprs);
    if (argExprs->err) {
      restoreState(state);
      return;
    }

    annotation->argExprsVec.push_back(argExprs);
  }
}

/**
 * AnnotType ::= SimpleType {Annotation}
 */
void Parser::parseAnnotType(spAnnotType &annotType) {
  annotType->simpleType = spSimpleType(new SimpleType);
  parseSimpleType(annotType->simpleType);
  if (annotType->simpleType->err) {
    annotType->addErr(-1);
    return;
  }

  // {Annotation}
  while (lexer->getCurToken() == STok::AT) {
    auto annotation = spAnnotation(new Annotation);
    parseAnnotation(annotation);
    if (annotation->err) {
      annotType->addErr(-1);
      break;
    }

    annotType->annotations.push_back(annotation);
  }
}

/**
 * ArgumentExprs ::= '(' [Exprs] ')'
 *                 | '(' [Exprs ','] PostfixExpr ':' '_' '*' ')'
 *                 | [nl] BlockExpr
 */
void Parser::parseArgumentExprs(spArgumentExprs &argExprs) {
  // TODO: [nl]
  // BlockExpr
  if (lexer->getCurToken() == STok::LCURLYB) {
    argExprs->opt = ArgumentExprs::Opt::BLOCK_EXPR;
    argExprs->blockExpr = spBlockExpr(new BlockExpr);
    parseBlockExpr(argExprs->blockExpr);
    if (argExprs->blockExpr->err) {
      argExprs->addErr(-1);
    }

    return;
  }

  // We assume '(' [Exprs] ')' until we see a ',' or the PostfixExpr production
  // '(' [Exprs] ')'
  argExprs->opt = ArgumentExprs::Opt::EXPRS;
  argExprs->tokLParen = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume '('

  if (argExprs->tokLParen->tok != STok::LPAREN) {
    argExprs->addErr(c4::ERR_EXP_LPAREN);
    return;
  }

  // '(' ')'
  if (lexer->getCurToken() == STok::RPAREN) {
    argExprs->tokRParen = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume ')'
    return;
  }

  // Try to parse Exprs
  State state;
  saveState(state);

  argExprs->exprs = spExprs(new Exprs);
  parseExprs(argExprs->exprs);
  if (argExprs->exprs->err) {
    restoreState(state);

    // Our only option now is a Postfix
    argExprs->opt = ArgumentExprs::Opt::EXPRS_POSTFIX_EXPR;

    // PostfixExpr ':' '_' '*'
    parseArgumentExprsHelper(argExprs);
    if (argExprs->err) {
      return;
    }

    // ')'
    if (lexer->getCurToken() != STok::RPAREN) {
      argExprs->addErr(c4::ERR_EXP_RPAREN);
      return;
    }

    argExprs->tokRParen = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume ')'
    return;
  }

  // '(' Exprs ')'
  if (lexer->getCurToken() == STok::RPAREN) {
    argExprs->tokRParen = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume ')'
    return;
  }

  if (lexer->getCurToken() != STok::COMMA) {
    argExprs->addErr(c4::ERR_EXP_COMMA);
    return;
  }

  argExprs->tokComma = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume ,

  // PostfixExpr ':' '_' '*'
  argExprs->opt = ArgumentExprs::Opt::EXPRS_POSTFIX_EXPR;
  parseArgumentExprsHelper(argExprs);
  if (argExprs->err) {
    return;
  }

  // ')'
  if (lexer->getCurToken() != STok::RPAREN) {
    argExprs->addErr(c4::ERR_EXP_RPAREN);
    return;
  }

  argExprs->tokRParen = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume ')'
}

/**
 * PostfixExpr ':' '_' '*'
 */
void Parser::parseArgumentExprsHelper(spArgumentExprs &argExprs) {
  argExprs->postfixExpr = spPostfixExpr(new PostfixExpr);
  parsePostfixExpr(argExprs->postfixExpr);
  if (argExprs->postfixExpr->err) {
    argExprs->addErr(-1);
    return;
  }

  // ':' '_' '*'
  if (lexer->getCurToken() != STok::COLON) {
    argExprs->addErr(c4::ERR_EXP_OP_COLON);
    return;
  }

  argExprs->tokColon = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume ':'

  if (lexer->getCurToken() != STok::UNDERSCORE) {
    argExprs->addErr(c4::ERR_EXP_UNDERSCORE);
    return;
  }

  argExprs->tokUnderscore = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume '_'

  if (lexer->getCurToken() != STok::MUL) {
    argExprs->addErr(c4::ERR_EXP_STAR);
    return;
  }

  argExprs->tokStar = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume '*'
}

/**
 * Block ::= {BlockStat semi} [ResultExpr]
 */
void Parser::parseBlock(spBlock &block) {
  State state;
  STok tok = lexer->getCurToken();
  while (tok != STok::ERROR
      && tok != STok::END_OF_FILE
      && tok != STok::RCURLYB) {

    saveState(state);
    spBlockStat blockStat = spBlockStat(new BlockStat);
    parseBlockStat(blockStat);
    if (blockStat->err) {
      restoreState(state);
      return;
    }

    saveState(state);
    spSemi semi = spSemi(new Semi);
    parseSemi(semi);
    if (semi->err) {
      restoreState(state);
      return;
    }

    block->paBlockStatSemi.push_back(std::make_pair(blockStat, semi));
    tok = lexer->getCurToken();
  }

  // TODO: [ResultExpr]
}

/**
 * BlockExpr ::= '{' CaseClauses '}'
 *             | '{' Block '}'
 */
void Parser::parseBlockExpr(spBlockExpr &blockExpr) {
  // TODO: CaseClauses

  // '{'
  spTokenNode tokLCurlyB = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume '{'
  if (tokLCurlyB->tok != STok::LCURLYB) {
    blockExpr->addErr(addErr(c4::ERR_EXP_LCURLY_BRACKET));
    return;
  }

  blockExpr->tokLCurlyB = tokLCurlyB;

  // Block
  blockExpr->opt = BlockExpr::Opt::BLOCK;
  blockExpr->block = spBlock(new Block);
  parseBlock(blockExpr->block);
  if (blockExpr->block->err) {
    blockExpr->addErr(-1);
    return;
  }

  // '}'
  spTokenNode tokRCurlyB = lexer->getCurTokenNode();
  lexer->getNextToken(); // consume '}'
  if (tokRCurlyB->tok != STok::RCURLYB) {
    blockExpr->addErr(addErr(c4::ERR_EXP_RCURLY_BRACKET));
    return;
  }

  blockExpr->tokRCurlyB = tokRCurlyB;
}

/**
 * BlockStat ::= Import
 *             | {Annotation} ['implicit' | 'lazy'] Def
 *             | {Annotation} {LocalModifier} TmplDef
 *             | Expr1
 */
void Parser::parseBlockStat(spBlockStat &blockStat) {
  // Import
  if (lexer->getCurToken() == STok::IMPORT) {
    blockStat->opt = BlockStat::Opt::IMPORT;
    blockStat->import = spImport(new Import);
    parseImport(blockStat->import);
    if (blockStat->import->err) {
      blockStat->addErr(-1);
    }

    return;
  }

  // {Annotation}
  auto seenAnnotation = false;
  while (lexer->getCurToken() == STok::AT) {
    seenAnnotation = true;
    auto annotation = spAnnotation(new Annotation);
    parseAnnotation(annotation);
    if (annotation->err) {
      blockStat->addErr(-1);
      break;
    }

    blockStat->annotations.push_back(annotation);
  }

  // ['implicit' | 'lazy'] Def
  bool seenDefPrefix = false;
  if (lexer->getCurToken() == STok::IMPLICIT) {
    seenDefPrefix = true;
    blockStat->tokImplicit = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume 'implicit'
  } else if (lexer->getCurToken() == STok::LAZY) {
    seenDefPrefix = true;
    blockStat->tokLazy = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume 'lazy'
  }

  // Try Def
  State state;
  saveState(state);
  auto def = spDef(new Def);
  parseDef(def);
  if (def->err == false) {
    blockStat->opt = BlockStat::Opt::DEF;
    blockStat->def = def;
    return;
  } else {
    if (seenDefPrefix) {
      blockStat->opt = BlockStat::Opt::DEF;
      blockStat->addErr(-1);
      return;
    }

    // Restore state and try next production rule
    restoreState(state);
  }

  // {LocalModifier} TmplDef
  auto seenLocalModifier = false;
  while (isLocalModifier(lexer->getCurToken())) {
    seenLocalModifier = true;
    auto localModifier = spLocalModifier(new LocalModifier);
    parseLocalModifier(localModifier);
    blockStat->localModifiers.push_back(localModifier);
  }

  auto tmplDef = spTmplDef(new TmplDef);
  parseTmplDef(tmplDef);
  if (tmplDef->err == false) {
    blockStat->opt = BlockStat::Opt::TMPL_DEF;
    blockStat->tmplDef = tmplDef;
    return;
  } else {
    if (seenLocalModifier) {
      blockStat->addErr(-1);
      return;
    }

    // Try next production rule if possible
    restoreState(state);
  }

  if (seenAnnotation) {
    blockStat->addErr(-1);
    return;
  }

  // Expr1
  blockStat->opt = BlockStat::Opt::EXPR1;
  blockStat->expr1 = spExpr1(new Expr1);
  parseExpr1(blockStat->expr1);
  if (blockStat->expr1->err) {
    blockStat->addErr(-1);
  }
}

/**
 * ClassDef ::= id [TypeParamClause] {ConstrAnnotation} [AccessModifier]
 *              ClassParamClauses ClassTemplateOpt
 */
void Parser::parseClassDef(spClassDef &classDef) {
  classDef->id = parseLexId();
  lexer->getNextToken(); // consume id
  if (classDef->id->err) {
    classDef->addErr(-1);
    return;
  }

  // TODO: [TypeParamClause]
  // TODO: {ConstrAnnotation}
  // TODO: [AccessModifier]
  // TODO: ClassParamClauses

  // ClassTemplateOpt
  classDef->classTmplOpt = spClassTemplateOpt(new ClassTemplateOpt);
  parseClassTemplateOpt(classDef->classTmplOpt);
  if (classDef->classTmplOpt->err) {
    classDef->addErr(-1);
  }
}

/**
 * ClassParents ::= Constr {'with' AnnotType}
 */
void Parser::parseClassParents(spClassParents &classParents) {
  classParents->constr = spConstr(new Constr);
  parseConstr(classParents->constr);
  if (classParents->constr->err) {
    classParents->constr->addErr(-1);
    return;
  }

  // TODO: {'with' AnnotType}
}

/**
 * ClassTemplate ::= [EarlyDefs] ClassParents [TemplateBody]
 */
void Parser::parseClassTemplate(spClassTemplate &classTmpl) {
  // TODO: [EarlyDefs]

  classTmpl->classParents = spClassParents(new ClassParents);
  parseClassParents(classTmpl->classParents);
  if (classTmpl->classParents->err) {
    classTmpl->addErr(-1);
    return;
  }

  // TODO: [TemplateBody]
}

/**
 * ClassTemplateOpt ::= 'extends' ClassTemplate
 *                    | [['extends'] TemplateBody]
 */
void Parser::parseClassTemplateOpt(spClassTemplateOpt &classTmplOpt) {
  if (lexer->getCurToken() == STok::EXTENDS) {
    classTmplOpt->tokExtends = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume 'extends'

    // We have to decide if we have a ClassTemplate or a TemplateBody, so we
    // first try ClassTemplate and if there's an error we try TemplateBody next.
    State state;
    saveState(state);
    spClassTemplate classTmpl = spClassTemplate(new ClassTemplate);
    parseClassTemplate(classTmpl);
    if (classTmpl->err == false) {
      classTmplOpt->opt = ClassTemplateOpt::Opt::CLASS_TEMPLATE;
      classTmplOpt->classTmpl = classTmpl;
      return;
    }

    restoreState(state);
  }

  // [TemplateBody]
  if (lexer->getCurToken() != STok::LCURLYB) {
    return;
  }

  classTmplOpt->opt = ClassTemplateOpt::Opt::TEMPLATE_BODY;
  classTmplOpt->tmplBody = spTemplateBody(new TemplateBody);
  parseTemplateBody(classTmplOpt->tmplBody);
  if (classTmplOpt->tmplBody->err) {
    classTmplOpt->addErr(-1);
  }
}

/**
 * CompilationUnit ::= {'package' QualId semi} TopStatSeq
 */
void Parser::parseCompilationUnit() {
  while (lexer->getCurToken() == STok::PACKAGE) {
    auto tok = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume token

    auto qualId = spQualId(new QualId);
    parseQualId(qualId);
    if (qualId->err) {
      compUnit->addErr(-1);
      break;
    }

    auto semi = spSemi(new Semi);
    parseSemi(semi);
    if (semi->err) {
      compUnit->addErr(-1);
      break;
    }

    compUnit->tuples.push_back(std::tuple<spTokenNode, spQualId, spSemi>(
      tok, qualId, semi));
  }

  // TopStatSeq
  compUnit->topStatSeq = spTopStatSeq(new TopStatSeq);
  parseTopStatSeq(compUnit->topStatSeq);
}

/**
 * Constr ::= AnnotType {ArgumentExprs}
 */
void Parser::parseConstr(spConstr &constr) {
  constr->annotType = spAnnotType(new AnnotType);
  parseAnnotType(constr->annotType);
  if (constr->annotType->err) {
    constr->addErr(-1);
    return;
  }

  // {ArgumentExprs}
  State state;
  while (true) {
    saveState(state);
    spArgumentExprs argExprs = spArgumentExprs(new ArgumentExprs);
    parseArgumentExprs(argExprs);
    if (argExprs->err) {
      restoreState(state);
      return;
    }

    constr->argExprsVec.push_back(argExprs);
  }
}

/**
 * CompoundType ::= AnnotType {'with' AnnotType} [Refinement]
 *                | Refinement
 */
void Parser::parseCompoundType(spCompoundType &compoundType) {
  compoundType->opt = CompoundType::Opt::ANNOT_TYPE;
  compoundType->annotType = spAnnotType(new AnnotType);
  parseAnnotType(compoundType->annotType);
  if (compoundType->annotType->err) {
    compoundType->addErr(-1);
    return;
  }

  // TODO: {'with' AnnotType} [Refinement]
  // TODO: Refinement
}

/**
 * Def ::= PatVarDef
 *       | 'def' FunDef
 *       | 'type' {nl} TypeDef
 *       | TmplDef
 */
void Parser::parseDef(spDef &def) {

  // TODO: PatVarDef

  {
    // 'def' FunDef
    if (lexer->getCurToken() == STok::DEF) {
      def->opt = Def::Opt::DEF;
      def->tokDef = lexer->getCurTokenNode();
      lexer->getNextToken(); // consume 'def'

      def->funDef = spFunDef(new FunDef);
      parseFunDef(def->funDef);
      if (def->funDef->err) {
        def->addErr(-1);
      }
      return;
    }
  }

  // TODO: 'type' {nl} TypeDef
  // TODO: TmplDef

  def->addErr(-1);
}

/**
 * FunDef ::= FunSig [':' Type] '=' Expr
 *          | FunSig [nl] '{' Block '}'
 *          | 'this' ParamClause ParamClauses
 *            ('=' ConstrExpr | [nl] ConstrBlock)
 */
void Parser::parseFunDef(spFunDef &funDef) {
  {
    // FunSig [':' Type] '=' Expr
    funDef->opt = FunDef::Opt::FUN_SIG_EQUALS_EXPR;
    funDef->funSig = spFunSig(new FunSig);
    parseFunSig(funDef->funSig);
    if (funDef->funSig->err) {
      funDef->addErr(-1);
      return;
    }

    // [':' Type]
    if (lexer->getCurToken() == STok::COLON) {
      funDef->tokColon = lexer->getCurTokenNode();
      lexer->getNextToken(); // consume ':'

      funDef->type = spType(new Type);
      parseType(funDef->type);
      if (funDef->type->err) {
        funDef->addErr(-1);
        return;
      }
    }

    if (lexer->getCurToken() != STok::EQUALS) {
      funDef->addErr(c4::ERR_EXP_OP_EQUALS);
      return;
    }

    funDef->tokEquals = lexer->getCurTokenNode();
    lexer->getNextToken(); // consume '='

    funDef->expr = spExpr(new Expr);
    parseExpr(funDef->expr);
    if (funDef->expr->err) {
      funDef->addErr(-1);
    }

    return;
  }

  // TODO: FunSig [nl] '{' Block '}'

  // TODO: 'this' ParamClause ParamClauses ('=' ConstrExpr | [nl] ConstrBlock)

  funDef->addErr(-1);
}

/**
 * FunSig ::= id [FunTypeParamClause] ParamClauses
 */
void Parser::parseFunSig(spFunSig &funSig) {
  funSig->id = parseLexId();
  lexer->getNextToken(); // consume 'id'
  if (funSig->id->err) {
    funSig->addErr(-1);
    return;
  }

  // [FunTypeParamClause]
  if (lexer->getCurToken() == STok::LBRACKET) {
    funSig->funTypeParamClause = spFunTypeParamClause(new FunTypeParamClause);
    parseFunTypeParamClause(funSig->funTypeParamClause);
    if (funSig->funTypeParamClause->err) {
      // We have an error but we don't exit here.
      // We try to keep parsing the function.
      funSig->addErr(-1);
    }
  }

  // ParamClauses
  funSig->paramClauses = spParamClauses(new ParamClauses);
  parseParamClauses(funSig->paramClauses);
  if (funSig->paramClauses->err) {
    funSig->addErr(-1);
  }
}

/**
 * FunTypeParamClause ::= '[' TypeParam {',' TypeParam} ']'
 */
void Parser::parseFunTypeParamClause(
  spFunTypeParamClause &funTypeParamClause) {

  // '['
  if (lexer->getCurToken() != STok::LBRACKET) {
    funTypeParamClause->addErr(c4::ERR_EXP_LBRACKET);
    return;
  }

  funTypeParamClause->tokLBracket = lexer->getCurTokenNode();
  lexer->getNextToken(); // '['

  funTypeParamClause->typeParam = spTypeParam(new TypeParam);
  parseTypeParam(funTypeParamClause->typeParam);
  if (funTypeParamClause->typeParam->err) {
    funTypeParamClause->addErr(-1);
    return;
  }
